# KnowledgeGraphCrew

./: README.md  pyproject.toml
src/crew2/: crew.py  main.py
src/crew2/config/: agents.yaml  tasks.yaml
src/crew2/tools/: custom_tools.py
