[tool.poetry]
name = "crew2"
version = "0.1.0"
description = "crew2 using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.70.1,<1.0.0" }


[tool.poetry.scripts]
crew2 = "crew2.main:run"
run_crew = "crew2.main:run"
train = "crew2.main:train"
replay = "crew2.main:replay"
test = "crew2.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
